modified : .top-header z-index .fix-search .search z-index added: - filter on lookfor

--- a/src/main/webapp/resources/css/test.css
+++ b/src/main/webapp/resources/css/test.css
@@ -2,7 +2,6 @@
 * {
     box-sizing: border-box;
 }
-
 body {
     margin: 0;
 }
@@ -15,6 +14,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 80;
 }
 
 .container-fluid {
@@ -38,6 +38,7 @@ body {
 .fix-search .search {
     position: fixed;
     top: 10px;
+    z-index: 90;
 }
 
 .fix-search .search input {
@@ -166,8 +167,8 @@ form.go-right label {
 /*end search effect*/
 
 /* displaying content */
-main{
-
+.answer{
+    z-index: -1;
 }
 
 /* width sizes*/
